// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket Tailor Coldharbour Blue retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Curzon Wimbledon retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335583",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1788895800000,
      },
    ],
    "showingId": "tickettailor.com-2335583",
    "title": "Bugonia",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335583",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335929",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1790710200000,
      },
    ],
    "showingId": "tickettailor.com-2335929",
    "title": "I Swear",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335929",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335946",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1791919800000,
      },
    ],
    "showingId": "tickettailor.com-2335946",
    "title": "Virginia Woolf's Night & Day",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335946",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335962",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1793737800000,
      },
    ],
    "showingId": "tickettailor.com-2335962",
    "title": "Two Prosecutors",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335962",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2335990",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1794947400000,
      },
    ],
    "showingId": "tickettailor.com-2335990",
    "title": "Dragonfly",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2335990",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2336016",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1795552200000,
      },
    ],
    "showingId": "tickettailor.com-2336016",
    "title": "Nouvelle Vague",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2336016",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/wimbledonfilmclub/2336025",
        "format": {},
        "notes": "Presented by Wimbledon Film Club",
        "status": {},
        "time": 1796761800000,
      },
    ],
    "showingId": "tickettailor.com-2336025",
    "title": "Rental Family",
    "url": "https://www.tickettailor.com/events/wimbledonfilmclub/2336025",
  },
]
`;

exports[`Ticket Tailor Good Shepherd Studios retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 6300000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/weflockcic/2334080",
        "format": {},
        "notes": "Presented by Waltham Forest Cinema Project",
        "status": {},
        "time": 1789669800000,
      },
    ],
    "showingId": "tickettailor.com-2334080",
    "title": "Underground + live score",
    "url": "https://www.tickettailor.com/events/weflockcic/2334080",
  },
]
`;

exports[`Ticket Tailor Lost Cinema retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor Siobhan Davies Studios retrieve and find events 1`] = `[]`;

exports[`Ticket Tailor The Haggerston retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.tickettailor.com/events/midweekcinema/2296117?date=2026-09-01",
        "format": {},
        "notes": "Presented by Midweek Cinema",
        "status": {},
        "time": 1788285600000,
      },
    ],
    "showingId": "tickettailor.com-2296117",
    "title": "Hard Eight (1996)",
    "url": "https://www.tickettailor.com/events/midweekcinema/2296117?date=2026-09-01",
  },
]
`;
